[package]
name = "culper-lib"
version = "0.1.0"
authors = ["Mäx <max.kiehnscherf@gmail.com>"]
description = "library of common code for culper & culper-server"
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
failure = "0.1.2"
dirs = "1.0.4"
serde = "1.0"
serde_derive = "1.0.79"
serde_yaml = "0.7"
toml = "0.4.8"
base64 = "0.9.2"
